# sudoku

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  chained_sudoku.cpp  chained_sudoku.h  cmake_install.cmake  compare_fields.cpp  compare_fields.h  field.cpp  field.h  interleaved_sudoku.cpp  interleaved_sudoku.h  main.cpp  out.txt  run.py  sudoku  sudoku.cbp  sudoku.cpp  sudoku.depend  sudoku.h  sudoku.kdev4  sudoku.layout  sudoku_chain.cpp  sudoku_chain.h  sudoku_max  sudoku_min  sudoku_mixed  sudoku_mixed30  sudoku_mixed7  sudoku_rand  sum_box.cpp  sum_box.h
.kdev4/: sudoku.kdev4
70.Geb/: solution.txt
output/: solution.txt
output2/: solution.txt
output3/: solution.txt
results/: sudoku_16x16_path_34_33_32_31_31_31_30_30_29_29_28_27_27_26_25_24_23_22_21_20_19_20_19_18_21_fixed_145.txt  sudoku_16x16_path_43_42_42_43_42_41_40_41_41_40_40_39_38_37_36_35_35_35_34_34_33_32_31_31_30_fixed_154.txt  sudoku_16x16_path_44_44_43_44_43_42_43_43_44_45_44_45_46_46_45_45_45_44_45_46_46_46_45_44_43_fixed_156.txt  sudoku_16x16_path_56_55_54_54_54_53_54_53_54_55_57_58_57_56_55_54_56_55_54_54_53_52_52_51_51_fixed_164.txt  sudoku_9x9_path_13_12_12_11_11_11_11_11_11_10_13_14_13_12_12_12_11_10_9_8_7_6_5_5_4_fixed_32.txt  sudoku_9x9_path_14_13_12_11_10_11_11_10_9_8_7_9_9_8_8_7_6_5_6_5_4_4_4_6_9_fixed_35.txt  sudoku_9x9_path_14_13_14_13_13_12_11_10_9_8_7_7_6_5_7_7_8_12_11_10_9_10_9_8_7_fixed_31.txt  sudoku_9x9_path_18_18_17_16_15_14_17_16_15_15_15_14_13_13_12_11_10_9_8_7_7_6_9_8_12_fixed_36.txt  (+35 more)
src/: field.cpp  field.h  main.cpp  sudoku.cpp  sudoku.h  sudoku_chain.cpp  (+3 more)
(+50 files in other folders)
